# iternals/controller/admin.go
@@ -2,7 +2,10 @@ package controller
 
 import (
 	"KYC/iternals/service"
+	"fmt"
 	"net/http"
+	"os"
+	"path/filepath"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
@@ -117,4 +120,79 @@ func ConfirmIdentification(c *gin.Context) {
 		"data":        result,
 	})
 
+}
+
+// GetUserDocsByUserID godoc
+// @Summary      Get user documents by user ID
+// @Description  Returns paths to user documents if they exist
+// @Tags         admin
+// @Security     ApiKeyAuth
+// @Produce      json
+// @Param        id    query     int  true  "User ID"
+// @Success      200   {object}  map[string]string
+// @Failure      400   {object}  map[string]string
+// @Failure      401   {object}  map[string]string
+// @Failure      404   {object}  map[string]string
+// @Router       /admin/user-docs [get]
+func GetUserDocsByUserID(c *gin.Context) {
+	adminID := c.GetInt(userIDCtx)
+	isAdmin, err := service.CheckRole(adminID)
+	if err != nil {
+		c.AbortWithStatusJSON(401, gin.H{
+			"status_code":   http.StatusUnauthorized,
+			"error_message": err.Error(),
+		})
+
+		return
+	}
+
+	if !isAdmin {
+		c.AbortWithStatusJSON(401, gin.H{
+			"status_code":   http.StatusUnauthorized,
+			"error_message": "Unauthorized",
+		})
+
+		return
+	}
+
+	userID := c.Query("id")
+	userIDint, err := strconv.Atoi(userID)
+	if err != nil {
+		c.AbortWithStatusJSON(400, gin.H{
+			"status_code":   400,
+			"error_message": err.Error(),
+		})
+
+		return
+	}
+
+	u, err := service.GetUserByID(userIDint)
+	if err != nil {
+		c.AbortWithStatusJSON(404, gin.H{
+			"status_code":   404,
+			"error_message": err.Error(),
+		})
+
+		return
+	}
+
+	filePath := fmt.Sprintf("./files/users/%s/docs/", u.Login)
+
+	files := []string{"frontID.png", "backID.png", "selfieID.png"}
+	result := make(map[string]string)
+
+	for _, file := range files {
+		full := filepath.Join(filePath, file)
+		if _, err := os.Stat(full); err == nil {
+			result[file] = full
+		} else {
+			result[file] = ""
+		}
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"user_id":   u.ID,
+		"login":     u.Login,
+		"documents": result,
+	})
 }
